--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
             body { text-align: center; padding: 10%; font: 20px Helvetica, sans-serif; color: #333; }
             h1 { font-size: 50px; margin: 0; }
             article { display: block; text-align: left; max-width: 650px; margin: 0 auto; }
-            a { color: #dc8100; text-decoration: none; }
-            a:hover { color: #333; text-decoration: none; }
+            a { color: #1c5bad; text-decoration: none; }
+            a:hover { color: rgb(128, 59, 59); text-decoration: none; }
             @media only screen and (max-width : 480px) {
                 h1 { font-size: 40px; }
             }
@@ -17,10 +17,8 @@
     </head>
     <body>
         <article>
-            <h1>Site is temporarily unavailable.</h1>
-            <p>Scheduled maintenance is currently in progress. Please check back soon.</p>
-            <p>We apologize for any inconvenience.</p>
-            <p id="signature">&mdash; <a href="mailto:[Email]">[Name]</a></p>
+            <h1>Сайт временно не работает.</h1>
+            <p>Пожалуйста попробуйте еще раз позже.</p>
         </article>
     </body>
 </html>
