--- a/index.html
+++ b/index.html
@@ -1,24 +1,72 @@
 <!DOCTYPE html>
-<html>
-    <head>
-        <title>Site is down for maintenance</title>
-        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <style type="text/css">
-            body { text-align: center; padding: 10%; font: 20px Helvetica, sans-serif; color: #333; }
-            h1 { font-size: 50px; margin: 0; }
-            article { display: block; text-align: left; max-width: 650px; margin: 0 auto; }
-            a { color: #1c5bad; text-decoration: none; }
-            a:hover { color: rgb(128, 59, 59); text-decoration: none; }
-            @media only screen and (max-width : 480px) {
-                h1 { font-size: 40px; }
-            }
-        </style>
-    </head>
-    <body>
-        <article>
-            <h1>Сайт временно не работает.</h1>
-            <p>Пожалуйста попробуйте еще раз позже.</p>
-        </article>
-    </body>
+<html lang="en">
+
+
+<head>
+	<title>UniSports - Единый спортивный абонемент</title>
+    <meta charset="utf-8" />
+    <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="theme-color" content="#000000" />
+	<meta name="apple-mobile-web-app-capable" content="yes" />
+	<meta name="keywords"
+		content="unisports, unisports kg, unisport kg, юниспорт кг, единый абонемент, единый спортивный абонемент, абонемент по qr"
+		data-rh="true" />
+	<meta name="description" content="Покупай один абонемент и тренируйся в разных спортивных заведениях Бишкека"
+		data-rh="true" />
+	<meta property="fb:app_id" content="2308324446151667" />
+	<meta property="og:type" content="website" />
+	<meta property="og:title" content="UniSports" data-rh="true" />
+	<meta property="og:url" content="https://unisports.kg" data-rh="true" />
+	<meta property="og:description" content="Покупай один абонемент и тренируйся в разных спортивных заведениях Бишкека"
+		data-rh="true" />
+	<meta property="og:image" content=" " />
+	<meta http-equiv="Cache-Control" content="max-age=3600, must-revalidate" />
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800&display=swap" rel="stylesheet" />
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">
+	<!--===============================================================================================-->
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
+	<!--===============================================================================================-->
+</head>
+
+<body>
+	<div class="bg-img1 size1 overlay1" style="background-image: url('images/bg01.jpg');">
+		<div class="size1 p-l-15 p-r-15 p-t-30 p-b-50">
+			<div class="flex-w flex-sb-m p-l-75 p-r-60 p-b-165 respon1">
+				<div class="logo-banner m-r-30 m-t-10 m-b-10">
+					<div class="wrappic1">
+						<a href="#"><img src="images/icons/logo.png" alt="LOGO"></a>
+					</div>
+					<div class="l1-txt2-inline">UniSports</div>
+				</div>
+
+				<div class="flex-w m-t-10 m-b-10">
+					<a target="_blank" rel="noopener noreferrer" href="https://www.facebook.com/UniSportsBishkek/"
+						class="size4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3">
+						<i class="fa fa-facebook"></i>
+					</a>
+
+					<a target="_blank" rel="noopener noreferrer" href="https://www.instagram.com/unisports_kg/"
+						class="size4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3">
+						<i class="fa fa-instagram"></i>
+					</a>
+
+					<a href="mailto:support@unisports.kg" class="size4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3">
+						<i class="fa fa-envelope"></i>
+					</a>
+				</div>
+			</div>
+
+			<div class="wsize1 m-lr-auto">
+				<p class="txt-center l1-txt1 p-b-60">
+					<span class="l1-txt2">Сайт временно не работает.</span>
+				</p>
+				<p class="txt-center l1-txt3 p-b-60">Пожалуйста попробуйте еще раз позже.</p>
+			</div>
+		</div>
+	</div>
+</body>
+
 </html>
