--- a/index.html
+++ b/index.html
@@ -50,39 +50,12 @@
       style="background-image: url('images/bg01.jpg');"
     >
       <div class="size1 p-l-15 p-r-15 p-t-30 p-b-50">
-        <div class="flex-w flex-sb-m p-l-75 p-r-60 p-b-165 respon1">
+        <div class="flex-w flex-sb-m p-l-75 p-r-60 respon1">
           <div class="logo-banner m-r-30 m-t-10 m-b-10">
             <div class="wrappic1">
               <a href="#"><img src="images/icons/logo.png" alt="LOGO"/></a>
             </div>
             <div class="l1-txt2-inline">UniSports</div>
-          </div>
-
-          <div class="flex-w m-t-10 m-b-10">
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              href="https://www.facebook.com/UniSportsBishkek/"
-              class="size4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3"
-            >
-              <i class="fa fa-facebook"></i>
-            </a>
-
-            <a
-              target="_blank"
-              rel="noopener noreferrer"
-              href="https://www.instagram.com/unisports_kg/"
-              class="size4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3"
-            >
-              <i class="fa fa-instagram"></i>
-            </a>
-
-            <a
-              href="mailto:support@unisports.kg"
-              class="size4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3"
-            >
-              <i class="fa fa-envelope"></i>
-            </a>
           </div>
         </div>
 
@@ -91,7 +64,6 @@
             В связи с глобальной пандемией и введением ЧС в Кыргызстане мы
             приостанавливаем работу нашего сайта чтобы сократить операционные
             затраты.
-            <!-- <span class="l1-txt2">Сайт временно не работает.</span> -->
           </p>
           <p class="txt-center l1-txt3 p-b-60">
             <span class="l1-txt2"
@@ -100,6 +72,35 @@
               спортивных заведений.</span
             >
           </p>
+        </div>
+
+        <div class="wsize1 m-lr-auto">
+          <div class="txt-center">
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.facebook.com/UniSportsBishkek/"
+              class="size4 display4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3"
+            >
+              <i class="fa fa-facebook"></i>
+            </a>
+
+            <a
+              target="_blank"
+              rel="noopener noreferrer"
+              href="https://www.instagram.com/unisports_kg/"
+              class="size4 display4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3"
+            >
+              <i class="fa fa-instagram"></i>
+            </a>
+
+            <a
+              href="mailto:support@unisports.kg"
+              class="size4 display4 flex-c-m how-social trans-04 m-r-5 m-b-3 m-t-3"
+            >
+              <i class="fa fa-envelope"></i>
+            </a>
+          </div>
         </div>
       </div>
     </div>
